--- a/web/webspeechdemo1.html
+++ b/web/webspeechdemo1.html
@@ -105,7 +105,7 @@
   <a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">
     Web Speech API</a> Demonstration</h1>
 <div>
-    <textarea id="txtArea" rows="2" cols="70" placeholder="Enter a sentence to be parsed"></textarea>
+    <textarea id="txtArea" rows="2" cols="70" placeholder="Enter a sentence to be parsed, eg 'show me apartments for sale in Sydney'"></textarea>
     <button onclick="parseText()">Parse</button>
 
 </div>
